fix inconsistent hover on sidebar scrollbar

--- a/src/layout/NavSidebar.module.scss
+++ b/src/layout/NavSidebar.module.scss
@@ -9,7 +9,6 @@
   flex-shrink: 0;
   width: 300px;
   padding: 18px 0;
-  margin-left: -6px;
   padding-right: 25px;
   //background: #f8f9fa;
   // border-right: 1px solid hsla(var(--web-negative-hsl), 0.09);
