--- a/src/style.scss
+++ b/src/style.scss
@@ -30,6 +30,12 @@
 
 @mixin scrollbar {
   scrollbar-gutter: stable;
+  scrollbar-width: thin;
+  scrollbar-color: transparent transparent;
+  &:hover,
+  &:focus-within {
+    scrollbar-color: hsla(var(--web-negative-hsl), 0.28) transparent;
+  }
 
   &::-webkit-scrollbar {
     width: 6px;
@@ -40,13 +46,14 @@
     background-color: transparent;
   }
   &::-webkit-scrollbar-thumb {
-    box-shadow: inset 0 0 0 5px hsla(var(--web-negative-hsl), 0);
+    background-color: transparent;
     border-radius: 20px;
   }
-  &:hover::-webkit-scrollbar-thumb {
-    box-shadow: inset 0 0 0 5px hsla(var(--web-negative-hsl), 0.2);
+  &:hover::-webkit-scrollbar-thumb,
+  &:focus-within::-webkit-scrollbar-thumb {
+    background-color: hsla(var(--web-negative-hsl), 0.28);
   }
   &:hover::-webkit-scrollbar-thumb:hover {
-    box-shadow: inset 0 0 0 5px hsla(var(--web-negative-hsl), 0.4);
+    background-color: hsla(var(--web-negative-hsl), 0.4);
   }
 }
